[tool.poetry]
name = "py_graph_t"
version = "0.1.0"
description = "Lib for manipulation and creation graphs"
license = "MIT"

authors = [
    "Rich Elton"
]

readme = 'README.md'
repository = "https://github.com/Rickecr/PyGraph"
homepage = "https://github.com/Rickecr/PyGraph"

keywords = ['algoritms', 'graph', 'theory']

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
