[tool.poetry]
name = "pygraph"
version = "0.1.0"
description = "Biblioteca com intuito de implementar os grafos e seus \\"
authors = ["algoritmos de Teoria dos Grafos."]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-watch = "^4.2.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
